test/tools/router_check/test/config/Redirect3.yaml
virtual_hosts:
- name: www2
  domains:
  - www.lyft.com
  routes:
  - match:
      prefix: /
    route:
      weighted_clusters:
        clusters:
        - name: www2
          weight: 100
        total_weight: 100
- name: redirect
  domains:
  - redirect.lyft.com
  routes:
  - match:
      prefix: /foo
    redirect:
      host_redirect: new.lyft.com
